MK Solo plays are now sorted by scenario, play count and last played